<resources>
    <string name="app_name">KittyORM Demo</string>
    <string name="title_lesson_detail">Lesson Details</string>
    <string name="_a_animal_DOG">Dog</string>
    <string name="_a_animal_CAT">Cat</string>
    <string name="_a_animal_GOAT">Goat</string>
    <string name="_a_animal_SHEEP">Sheep</string>
    <string name="_a_animal_TIGER">Tiger</string>
    <string name="_a_animal_LION">Lion</string>
    <string name="_a_animal_WOLF">Wolf</string>
    <string name="_a_animal_BEAR">Bear</string>
    <string name="_a_animal_DOG_says">Woof! Woof!</string>
    <string name="_a_animal_cat_says">Meeeooow ;)</string>
    <string name="_a_animal_GOAT_says">Maaaaah</string>
    <string name="_a_animal_SHEEP_says">Baaaaaaaah</string>
    <string name="_a_animal_TIGER_says">Arrrrrrrrr</string>
    <string name="_a_animal_LION_says">I am better than tiger cause I am the King of the Animals!</string>
    <string name="_a_animal_WOLF_says">Awhooo</string>
    <string name="_a_animal_BEAR_says">Privet, comrade!</string>
    <string-array name="animal_enum">
        <item>DOG</item>
        <item>CAT</item>
        <item>GOAT</item>
        <item>SHEEP</item>
        <item>TIGER</item>
        <item>LION</item>
        <item>WOLF</item>
        <item>BEAR</item>
    </string-array>
    <string name="_menu_lesson">Lesson #{0}</string>
    <string name="_menu_lesson_1_title_introduction">Introduction to KittyORM</string>
    <string name="_menu_lesson_2_title_basic_implementation">KittyORM basic implementation</string>
    <string name="_menu_lesson_3_title_datatypes_and_constraints">Datatype affinities, constraints and indexes declarations</string>
    <string name="_menu_lesson_4_title_optimisation_debug_and_ecyptyon">Performance tweaks, debugging and database encryption</string>
    <string name="_menu_lesson_5_title_migrations">Migrations between different database versions</string>
    <string name="_menu_lesson_6_make_kitty_orm_greater">Make KittyORM even greater, use, share, develop or support</string>
    <string name="_menu_lesson_7_contact_and_license">Contact and legal information</string>
    <string name="_warning_dialog_title">Warning!</string>
    <string name="_warning_dialog_ok_button_text">OK</string>
    <string name="_warning_dialog_test_message_little">I\'m test message. Do not translate me.</string>
    <string name="_warning_dialog_test_message_big">I\'m test message for warning dialog. Do not translate me. Also I\'m big (means it is not enough one row to show me).</string>
    <string name="_mm_fab_contact">Mail us</string>
    <string name="_mm_fab_legal_info">View legal info</string>
    <string name="_mm_follow_us">Follow KittyORM at twitter</string>
    <string name="_menu_choose_mail_client">Choose mail client:</string>
    <string name="_menu_mail_header">sent from KittyORM demo application</string>
    <string name="_menu_share_link_subject">Hey, found good SQLite ORM for android: KittyORM</string>
    <string name="_menu_share_link_chooser_title">Use way to share KittyORM:</string>
    <string name="paginator_first_page">&#60;&#60;</string>
    <string name="paginator_page_up">&#60;</string>
    <string name="paginator_page_down">&#62;</string>
    <string name="paginator_last_page">&#62;&#62;</string>
    <string name="_perm_dialog_title">Warning!</string>
    <string name="_perm_dialog_message">KittyORM Demo requires READ\WRITE access to external storage for external db demo. Please provide them manually.</string>
    <string name="_perm_dialog_positive">Open permissions</string>
    <string name="_l1_tab_intro">Introduction to KittyORM</string>
    <string name="_l1_tab_getting_started">Getting started</string>
    <string name="_l1_tab_external">External DB</string>
    <string name="_l1_t1_snackbar_message">Introduction to KittyORM, what it can and why it was created.</string>
    <string name="_l1_t2_go_button">RUN CRUD OPERATIONS</string>
    <string name="_l1_t2_clear_button">CLEAR TABLE</string>
    <string name="_l1_t2_inserting">Inserting new record from entity {0} to table simple_database.simple_example.</string>
    <string name="_l1_t2_inserted">New record from entity {0} inserted successfully to table simple_database.simple_example.</string>
    <string name="_l1_t2_count">Right now simple_database.simple_example has {0} records.</string>
    <string name="_l1_t2_retrieving">Retrieving existing record from simple_database.simple_example table; method: {0}, parameters: {1}, operation id: {2} .</string>
    <string name="_l1_t2_retrieved">{0} model(s) successfully retrieved from simple_database.simple_example table; operation id = {1} .</string>
    <string name="_l1_t2_retrieved_model_show">Operation id = {0}, model number = {1}, model data: {2} .</string>
    <string name="_l1_t2_random_save">Ten random models generated and successfully inserted into simple_database.simple_example.</string>
    <string name="_l1_t2_one_alex_to_delete_found">Found one "Alex" to delete, deleting...</string>
    <string name="_l1_t2_one_alex_deleted">One "Alex" deleted successfully!</string>
    <string name="_l1_2_one_marina_deleting">Deleting record where record value random_integer = 445555 ...</string>
    <string name="_l1_2_one_marina_deleted">Record\'s where record value random_integer = 445555 deleted successfully!</string>
    <string name="_l1_t2_updating_entity">Updating entity {0} to {1}.</string>
    <string name="_l1_t2_updated">Entity updated successfully from {0} to {1}.</string>
    <string name="_l1_t2_random_save_tx">Ten random models generated and successfully inserted into simple_database.simple_example (TX mode).</string>
    <string name="_l1_t2_updating_query_like">Updating with query like method, entity {0}, WHERE first_name = Marina .</string>
    <string name="_l1_t2_updating_query_like_updated">Update successfully finished with query like method, entity {0}, WHERE first_name = Marina .</string>
    <string name="_l1_t2_clear">{0} record(s) deleted from simple_database.simple_example.</string>
    <string name="_l1_t2_expanded_text_pattern">Records in simple_example: {0} (clickable)</string>
    <string name="_l1_t2_snackbar_message">Basic usage of KittyORM CRUD controller. Click \'RUN CRUD OPERATIONS\' to run CRUD operations with DB.</string>
    <string name="_l1_t3_database_pattern">Database file: {0}</string>
    <string name="_l1_t3_state_exists_connected">connected to {0}</string>
    <string name="_l1_t3_state_waiting">db path: {0}, disconnected</string>
    <string name="_l1_t3_state_no_file">no db file found at {0}</string>
    <string name="_l1_t3_toasts_db_copied">Successfully copied database from assets to {0}!</string>
    <string name="_l1_t3_toasts_db_already_exists_at">Unable to copy database: it already exists at {0}</string>
    <string name="_l1_t3_toasts_db_already_io_exception">Unable to copy database: see IO exception details...</string>
    <string name="_l1_t3_toasts_db_already_read_only">Unable to copy database from assets, reason: external storage mounted is read only!</string>
    <string name="_l1_t3_toasts_db_already_not_available">Unable to copy database from assets, reason: external storage is not accessible!</string>
    <string name="_l1_t3_pick_db">Open DB</string>
    <string name="_l1_t3_copy_db">Copy DB from assets</string>
    <string name="_l1_t3_go_button">RUN CRUD OPERATIONS</string>
    <string name="_l1_t3_clear_button">CLEAR TABLE</string>
    <string name="_l1_t3_inserting">Inserting new record from entity {0} to table simple_database.simple_example.</string>
    <string name="_l1_t3_inserted">New record from entity {0} inserted successfully to table simple_database.simple_example.</string>
    <string name="_l1_t3_count">Right now simple_database.simple_example has {0} records.</string>
    <string name="_l1_t3_retrieving">Retrieving existing record from simple_database.simple_example table; method: {0}, parameters: {1}, operation id: {2} .</string>
    <string name="_l1_t3_retrieved">{0} model(s) successfully retrieved from simple_database.simple_example table; operation id = {1} .</string>
    <string name="_l1_t3_retrieved_model_show">Operation id = {0}, model number = {1}, model data: {2} .</string>
    <string name="_l1_t3_random_save">Ten random models generated and successfully inserted into simple_database.simple_example.</string>
    <string name="_l1_t3_one_alex_to_delete_found">Found one "Alex" to delete, deleting...</string>
    <string name="_l1_t3_one_alex_deleted">One "Alex" deleted successfully!</string>
    <string name="_l1_3_one_marina_deleting">Deleting record where record value random_integer = 445555 ...</string>
    <string name="_l1_3_one_marina_deleted">Record\'s where record value random_integer = 445555 deleted successfully!</string>
    <string name="_l1_t3_updating_entity">Updating entity {0} to {1}.</string>
    <string name="_l1_t3_updated">Entity updated successfully from {0} to {1}.</string>
    <string name="_l1_t3_random_save_tx">Ten random models generated and successfully inserted into simple_database.simple_example (TX mode).</string>
    <string name="_l1_t3_updating_query_like">Updating with query like method, entity {0}, WHERE first_name = Marina .</string>
    <string name="_l1_t3_updating_query_like_updated">Update successfully finished with query like method, entity {0}, WHERE first_name = Marina .</string>
    <string name="_l1_t3_clear">{0} record(s) deleted from simple_database.simple_example.</string>
    <string name="_l1_t3_expanded_text_pattern">Records in simple_example: {0} (clickable)</string>
    <string name="_l1_t3_snackbar_message">KittyORM and external databases, copy DB, open it and run some CRUD operations.</string>
    <string name="_l2_common_current_model_not_set">Current model: not set</string>
    <string name="_l2_t5_use_new_db_instance">Use new KittyORM database instance for random insert operations.</string>
    <string name="_l2_t5_undb_description">Initialization costs time&#8230;</string>
    <string name="_l2_t5_generate_10_rnd">Generate 10 instances of RandomModel and insert them into database table: </string>
    <string name="_l2_t5_generate_10_rnd_button">GENERATE 10 NEW</string>
    <string name="_l2_t5_generate_50k_rnd">Generate 50k instances of RandomModel and insert them into database table in AssyncTask: </string>
    <string name="_l2_t5_generate_50k_rnd_button">GENERATE 50k NEW</string>
    <string name="_l2_t5_generate_50k_rnd_tx">Generate 50k instances of RandomModel and insert them into database table in AssyncTask with transactions usage: </string>
    <string name="_l2_t5_generate_50k_rnd_button_tx">GENERATE 50k NEW (TX)</string>
    <string name="_l2_t5_expanded_text_pattern">RND insert log ({0} event(s), clickable)</string>
    <string name="_l3_t2_expanded_text_pattern">basic_database.cai ({0} record(s), clickable)</string>
    <string name="_l3_t2_fk_info_hint">This field is used in FK (basic_database.random.id), has to be unique and has ON UPDATE\\DELETE CASCADE set</string>
    <string name="_l3_t2_fk_long">Long rndId</string>
    <string name="_l3_t2_fk_et_hint">Enter integer or leave it blank</string>
    <string name="_l3_t2_animal_cats_only_hint">Only cats allowed to this party!</string>
    <string name="_l3_t2_animal_tw">Animals animal</string>
    <string name="_l3_t2_default_num_tw">Integer defaultNumber</string>
    <string name="_l3_t2_default_num_et_hint">Default (28)</string>
    <string name="_l3_t2_creation_date_tw">String creationDate</string>
    <string name="_l3_t2_et_creation_date_hint">Default (CURRENT_DATE)</string>
    <string name="_l3_t2_current_timestamp_tw">Timestamp creationTmstmp</string>
    <string name="_l3_t2_et_current_timestamp_hint">Default (CURRENT_TIMESTAMP)</string>
    <string name="_l3_t2_save_new_model">Save new model</string>
    <string name="_l3_t2_wipe_data">Wipe data</string>
</resources>