<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2018-2020 Denis Bogomolov (akaish)
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  ~ This file is a part of KittyORM project (KittyORM Demo), more information at
  ~ https://akaish.github.io/KittyORMPages/license/
  -->
<com.sothree.slidinguppanel.SlidingUpPanelLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:sothree="http://schemas.android.com/apk/res-auto"
    android:id="@+id/sliding_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    sothree:umanoPanelHeight="@dimen/sliding_bar_lesson_expand_me_height"
    sothree:umanoShadowHeight="4dp">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:scrollbarAlwaysDrawVerticalTrack="true">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorGrayLightest"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:stretchColumns="1"
                    >

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/lesson_elements_margin">
                        <TextView android:layout_width="0dip"
                            android:layout_weight="1"
                            android:singleLine="false"
                            android:textColor="@color/colorPrimaryDark"
                            android:layout_height="wrap_content"
                            android:text="@string/_l3_t2_fk_info_hint" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/lesson_elements_margin">

                        <TextView
                            android:id="@+id/l3_t2_fk_long"
                            android:layout_width="0dip"
                            android:layout_weight="1"
                            android:singleLine="false"
                            android:textColor="@color/colorPrimaryDark"
                            android:layout_height="wrap_content"
                            android:text="@string/_l3_t2_fk_long" />

                        <EditText
                            android:id="@+id/l3_t2_et_fk"
                            android:layout_width="0dip"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/_l3_t2_fk_et_hint"
                            android:inputType="number" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/lesson_elements_margin">
                        <TextView android:layout_width="0dip"
                            android:layout_weight="1"
                            android:singleLine="false"
                            android:textColor="@color/colorPrimaryDark"
                            android:layout_height="wrap_content"
                            android:text="@string/_l3_t2_animal_cats_only_hint" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/lesson_elements_margin">

                        <TextView
                            android:id="@+id/l3_t2_tw_animal"
                            android:layout_width="0dip"
                            android:layout_weight="1"
                            android:textColor="@color/colorPrimaryDark"
                            android:singleLine="false"
                            android:layout_height="wrap_content"
                            android:text="@string/_l3_t2_animal_tw" />

                        <Spinner
                            android:id="@+id/l3_t2_spinner"
                            android:layout_width="0dip"
                            android:layout_weight="1"
                            android:layout_height="wrap_content" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/lesson_elements_margin">

                        <TextView
                            android:id="@+id/l3_t2_tw_default_number"
                            android:layout_width="0dip"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorPrimaryDark"
                            android:singleLine="false"
                            android:text="@string/_l3_t2_default_num_tw" />

                        <EditText
                            android:id="@+id/l3_t2_et_default_number"
                            android:layout_width="0dip"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/_l3_t2_default_num_et_hint"
                            android:inputType="numberSigned" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/lesson_elements_margin">

                        <TextView
                            android:id="@+id/l3_t2_tw_creation_date"
                            android:layout_width="0dip"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorPrimaryDark"
                            android:singleLine="false"
                            android:text="@string/_l3_t2_creation_date_tw" />

                        <EditText
                            android:id="@+id/l3_t2_et_creation_date"
                            android:layout_width="0dip"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/_l3_t2_et_creation_date_hint"
                            android:inputType="text" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/lesson_elements_margin">

                        <TextView
                            android:id="@+id/l3_t2_tw_current_timestamp"
                            android:layout_width="0dip"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorPrimaryDark"
                            android:singleLine="false"
                            android:text="@string/_l3_t2_current_timestamp_tw" />

                        <EditText
                            android:id="@+id/l3_t2_et_current_timestamp"
                            android:layout_width="0dip"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/_l3_t2_et_current_timestamp_hint"
                            android:inputType="number" />
                    </TableRow>



                </TableLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_margin="@dimen/lesson_elements_margin"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/_l3_t2_save_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_l3_t2_save_new_model" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_margin="@dimen/lesson_elements_margin"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/_l3_t2_wipe_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_l3_t2_wipe_data" />
            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorGrayLightest"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:background="@color/colorPrimaryDark"
            android:id="@+id/_l3_t2_expanded_panel">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/_l3_t2_expanded_panel_text"
                android:gravity="center|center"
                android:textColor="@color/colorGrayLightest"
                android:text="@string/_l3_t2_expanded_text_pattern"
                android:theme="@style/AlertDialog.AppCompat.Light"
                android:textSize="16sp" />
        </RelativeLayout>


        <ListView
            android:layout_below="@+id/_l3_t2_expanded_panel"
            android:id="@+id/_l3_t2_expanded_panel_lw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorGrayLightest">

        </ListView>
    </RelativeLayout>


</com.sothree.slidinguppanel.SlidingUpPanelLayout>