<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2018 Denis Bogomolov (akaish)
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  ~ This file is a part of KittyORM project (KittyORM Demo), more information at
  ~ https://akaish.github.io/KittyORMPages/license/
  -->
<com.sothree.slidinguppanel.SlidingUpPanelLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:sothree="http://schemas.android.com/apk/res-auto"
    android:id="@+id/sliding_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    sothree:umanoPanelHeight="@dimen/sliding_bar_lesson_expand_me_height"
    sothree:umanoShadowHeight="4dp">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:scrollbarAlwaysDrawVerticalTrack="true">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:background="@color/colorGrayLightest">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:stretchColumns="1"
                    >

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/lesson_elements_margin"
                        >

                        <TextView
                            android:layout_width="0dip"
                            android:layout_weight="1"
                            android:singleLine="false"
                            android:textColor="@color/colorPrimaryDark"
                            android:layout_height="wrap_content"
                            android:text="@string/_l2_t5_use_new_db_instance" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/lesson_elements_margin"
                        >

                        <CheckBox
                            android:id="@+id/l2_t5_check_new_database_instance_for_operation"/>

                        <TextView
                            android:layout_width="0dip"
                            android:layout_weight="1"
                            android:singleLine="false"
                            android:textColor="@color/colorPrimaryDark"
                            android:layout_height="wrap_content"
                            android:text="@string/_l2_t5_undb_description" />


                    </TableRow>

                    <!-- Insert 10 random models -->

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_margin="@dimen/lesson_elements_margin"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="0dip"
                            android:layout_weight="1"
                            android:textColor="@color/colorPrimaryDark"
                            android:singleLine="false"
                            android:layout_height="wrap_content"
                            android:text="@string/_l2_t5_generate_10_rnd" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_margin="@dimen/lesson_elements_margin"
                        android:layout_height="wrap_content">



                        <Button
                            android:id="@+id/l2_t5_insert_10"
                            android:layout_width="0dip"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:text="@string/_l2_t5_generate_10_rnd_button" />

                    </TableRow>

                    <!-- Insert 500 random models async  -->



                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_margin="@dimen/lesson_elements_margin"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="0dip"
                            android:textColor="@color/colorPrimaryDark"
                            android:layout_weight="1"
                            android:singleLine="false"
                            android:layout_height="wrap_content"
                            android:text="@string/_l2_t5_generate_50k_rnd" />

                    </TableRow>


                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_margin="@dimen/lesson_elements_margin"
                        android:layout_height="wrap_content">

                        <Button
                            android:id="@+id/l2_t5_insert_50k"
                            android:layout_width="0dip"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:text="@string/_l2_t5_generate_50k_rnd_button" />

                    </TableRow>



                    <!-- Insert 500 random models aync in TX -->


                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_margin="@dimen/lesson_elements_margin"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="0dip"
                            android:textColor="@color/colorPrimaryDark"
                            android:layout_weight="1"
                            android:singleLine="false"
                            android:layout_height="wrap_content"
                            android:text="@string/_l2_t5_generate_50k_rnd_tx" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_margin="@dimen/lesson_elements_margin"
                        android:layout_height="wrap_content">

                        <Button
                            android:id="@+id/l2_t5_insert_50k_tx"
                            android:layout_width="0dip"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:text="@string/_l2_t5_generate_50k_rnd_button_tx" />
                    </TableRow>


                </TableLayout>
            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/colorGrayLightest"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:background="@color/colorPrimaryDark"
            android:id="@+id/_l2_t5_expanded_panel">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/_l2_t5_expanded_panel_text"
                android:gravity="center|center"
                android:textColor="@color/colorGrayLightest"
                android:text="@string/_l2_t5_expanded_text_pattern"
                android:theme="@style/AlertDialog.AppCompat.Light"
                android:textSize="16sp" />
        </RelativeLayout>


        <ListView
            android:layout_below="@+id/_l2_t5_expanded_panel"
            android:layout_width="match_parent"
            android:id="@+id/_l2_t5_expanded_panel_lw"
            android:textColor="@color/colorGrayLightest"
            android:layout_height="wrap_content">

        </ListView>
    </RelativeLayout>

</com.sothree.slidinguppanel.SlidingUpPanelLayout>